--- a/app-antivirus/klamav/ChangeLog
+++ b/app-antivirus/klamav/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-antivirus/klamav
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-antivirus/klamav/ChangeLog,v 1.31 2007/05/15 17:07:47 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-antivirus/klamav/ChangeLog,v 1.32 2007/05/19 16:52:09 nixnut Exp $
+
+  19 May 2007; nixnut <nixnut@gentoo.org> klamav-0.41.ebuild:
+  Stable on ppc wrt bug 177728
 
   15 May 2007; Christian Faulhammer <opfer@gentoo.org> klamav-0.41.ebuild:
   stable amd64, bug 177728
