--- a/net-zope/plone/ChangeLog
+++ b/net-zope/plone/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for net-zope/plone
 # Copyright 2003-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-zope/plone/ChangeLog,v 1.44 2007/02/10 15:38:39 radek Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-zope/plone/ChangeLog,v 1.45 2007/05/19 17:13:45 radek Exp $
+
+*plone-2.5.3 (19 May 2007)
+
+  19 May 2007; Radoslaw Stachowiak <radek@gentoo.org> -plone-2.0.ebuild,
+  -plone-2.0.4.ebuild, -plone-2.0.5.ebuild, -plone-2.0.5-r1.ebuild,
+  -plone-2.1.3.ebuild, -plone-2.5.1.ebuild, -plone-2.5.1-r1.ebuild,
+  -plone-2.5.2.ebuild, +plone-2.5.3.ebuild:
+  Security version bump, and cleaning old cruft
 
   10 Feb 2007; Radoslaw Stachowiak <radek@gentoo.org> plone-2.5.2.ebuild:
   added elementtree dep, solves #166203, spotted by Elias Probst
