--- a/net-dns/resolvconf-gentoo/ChangeLog
+++ b/net-dns/resolvconf-gentoo/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-dns/resolvconf-gentoo
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/resolvconf-gentoo/ChangeLog,v 1.28 2007/05/15 13:55:25 bangert Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/resolvconf-gentoo/ChangeLog,v 1.29 2007/05/19 17:14:26 kumba Exp $
+
+  19 May 2007; Joshua Kinard <kumba@gentoo.org>
+  resolvconf-gentoo-1.2.ebuild:
+  Stable on mips, per #159450.
 
   15 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
   add <herd>no-herd</herd>
