--- a/dev-python/wxpython-docs/ChangeLog
+++ b/dev-python/wxpython-docs/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/wxpython-docs
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/wxpython-docs/ChangeLog,v 1.22 2007/05/11 10:18:34 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/wxpython-docs/ChangeLog,v 1.23 2007/05/19 18:11:21 welp Exp $
+
+  19 May 2007; Peter Weller <welp@gentoo.org>
+  wxpython-docs-2.6.0.0-r1.ebuild:
+  Stable on amd64 wrt bug 177757
 
   11 May 2007; Raúl Porcel <armin76@gentoo.org>
   wxpython-docs-2.6.0.0-r1.ebuild:
