--- a/app-office/kmymoney2/ChangeLog
+++ b/app-office/kmymoney2/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-office/kmymoney2
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/kmymoney2/ChangeLog,v 1.60 2007/05/06 04:54:27 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/kmymoney2/ChangeLog,v 1.61 2007/05/19 20:51:59 opfer Exp $
+
+  19 May 2007; Christian Faulhammer <opfer@gentoo.org>
+  kmymoney2-0.8.6.ebuild:
+  stable amd64, bug 176284
 
   06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
   kmymoney2-0.8.6.ebuild:
