--- a/dev-lang/tendra/ChangeLog
+++ b/dev-lang/tendra/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/tendra
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/tendra/ChangeLog,v 1.4 2006/09/06 16:18:31 truedfx Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/tendra/ChangeLog,v 1.5 2007/05/19 20:52:01 truedfx Exp $
+
+  19 May 2007; Harald van Dĳk <truedfx@gentoo.org>
+  +files/tendra-5.0_pre20060322-install.patch,
+  tendra-5.0_pre20060322.ebuild:
+  Fix parallel install (#179126)
 
   06 Sep 2006; Harald van Dĳk <truedfx@gentoo.org>
   tendra-5.0_pre20060322.ebuild:
