--- a/www-apache/mod_lisp2/ChangeLog
+++ b/www-apache/mod_lisp2/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-apache/mod_lisp2
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_lisp2/ChangeLog,v 1.3 2007/01/15 17:10:11 chtekk Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_lisp2/ChangeLog,v 1.4 2007/05/19 21:01:32 welp Exp $
+
+  19 May 2007; Peter Weller <welp@gentoo.org> mod_lisp2-1.2.ebuild:
+  Keyworded ~amd64 wrt bug 178192
 
   15 Jan 2007; Luca Longinotti <chtekk@gentoo.org> mod_lisp2-1.2.ebuild:
   Cleanup.
