--- a/games-simulation/cultivation/ChangeLog
+++ b/games-simulation/cultivation/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-simulation/cultivation
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-simulation/cultivation/ChangeLog,v 1.1 2007/05/17 20:11:01 tupone Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-simulation/cultivation/ChangeLog,v 1.2 2007/05/19 21:17:02 tupone Exp $
+
+  19 May 2007; Tupone Alfredo <tupone@gentoo.org> cultivation-7.ebuild:
+  Added ~x86 keyword. Bug #150406 by Antoine
 
 *cultivation-7 (17 May 2007)
 
