--- a/dev-python/numarray/ChangeLog
+++ b/dev-python/numarray/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/numarray
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/numarray/ChangeLog,v 1.23 2007/03/18 00:20:10 marienz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/numarray/ChangeLog,v 1.24 2007/05/19 22:00:54 welp Exp $
+
+  19 May 2007; Peter Weller <welp@gentoo.org> numarray-1.5.2-r1.ebuild:
+  Keyworded ~x86-fbsd wrt bug 178368
 
   18 Mar 2007; Marien Zwart <marienz@gentoo.org> numarray-1.5.2-r1.ebuild:
   Clean up src_test a bit, thanks to ferringb for reporting.
