--- a/media-sound/freqtweak/ChangeLog
+++ b/media-sound/freqtweak/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/freqtweak
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/freqtweak/ChangeLog,v 1.22 2007/05/06 15:03:15 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/freqtweak/ChangeLog,v 1.23 2007/05/19 22:06:30 dirtyepic Exp $
+
+  19 May 2007; Ryan Hill <dirtyepic@gentoo.org>
+  +files/freqtweak-0.7.0_pre20070214-amd64-fixes.patch,
+  freqtweak-0.7.0_pre20070214.ebuild:
+  Add patch for AMD64 build failure in bug #176428.
 
   06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
   freqtweak-0.7.0_pre20070214.ebuild:
