stable amd64, bug 178983 Package-Manager: portage-2.1.2.7

--- a/x11-plugins/replytolist/ChangeLog
+++ b/x11-plugins/replytolist/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-plugins/replytolist
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/replytolist/ChangeLog,v 1.9 2007/05/18 13:05:44 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/replytolist/ChangeLog,v 1.10 2007/05/19 22:38:13 opfer Exp $
+
+  19 May 2007; Christian Faulhammer <opfer@gentoo.org>
+  replytolist-0.2.0.ebuild:
+  stable amd64, bug 178983
 
   18 May 2007; Gustavo Zacarias <gustavoz@gentoo.org>
   replytolist-0.2.0.ebuild:
