stable amd64, bug 178983 Package-Manager: portage-2.1.2.7

--- a/mail-client/mozilla-thunderbird-bin/ChangeLog
+++ b/mail-client/mozilla-thunderbird-bin/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for mail-client/mozilla-thunderbird-bin
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/mozilla-thunderbird-bin/ChangeLog,v 1.72 2007/05/18 10:36:59 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/mozilla-thunderbird-bin/ChangeLog,v 1.73 2007/05/19 22:50:57 opfer Exp $
+
+  19 May 2007; Christian Faulhammer <opfer@gentoo.org>
+  mozilla-thunderbird-bin-2.0.0.0.ebuild:
+  stable amd64, bug 178983
 
   18 May 2007; Raúl Porcel <armin76@gentoo.org>
   mozilla-thunderbird-bin-2.0.0.0.ebuild:
