--- a/mail-client/mozilla-thunderbird/ChangeLog
+++ b/mail-client/mozilla-thunderbird/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for mail-client/mozilla-thunderbird
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/mozilla-thunderbird/ChangeLog,v 1.191 2007/05/18 13:04:41 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/mozilla-thunderbird/ChangeLog,v 1.192 2007/05/19 22:49:21 opfer Exp $
+
+  19 May 2007; Christian Faulhammer <opfer@gentoo.org>
+  mozilla-thunderbird-2.0.0.0.ebuild:
+  stable amd64, bug 178983
 
   18 May 2007; Gustavo Zacarias <gustavoz@gentoo.org>
   mozilla-thunderbird-2.0.0.0.ebuild:
