--- a/net-im/twinkle/ChangeLog
+++ b/net-im/twinkle/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-im/twinkle
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/twinkle/ChangeLog,v 1.28 2007/02/01 09:36:17 dragonheart Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/twinkle/ChangeLog,v 1.29 2007/05/19 23:56:23 dragonheart Exp $
+
+*twinkle-1.0.1 (19 May 2007)
+
+  19 May 2007; Daniel Black <dragonheart@gentoo.org> +twinkle-1.0.1.ebuild:
+  version bump. thanks to genstef for noticing
 
   01 Feb 2007; Daniel Black <dragonheart@gentoo.org> twinkle-1.0-r1.ebuild:
   ARTS_REQUIRED="never" to fix bug #164550 thanks to Laurent
