--- a/www-misc/libapreq2/ChangeLog
+++ b/www-misc/libapreq2/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for www-misc/libapreq2
 # Copyright 2003-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-misc/libapreq2/ChangeLog,v 1.7 2007/05/05 13:05:23 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-misc/libapreq2/ChangeLog,v 1.8 2007/05/20 07:06:02 opfer Exp $
+
+  20 May 2007; Christian Faulhammer <opfer@gentoo.org>
+  libapreq2-2.08.ebuild:
+  stable amd64, bug 178194
 
 *libapreq2-2.08 (05 May 2007)
 
