--- a/media-libs/libkexiv2/ChangeLog
+++ b/media-libs/libkexiv2/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/libkexiv2
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libkexiv2/ChangeLog,v 1.8 2007/05/16 13:59:57 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libkexiv2/ChangeLog,v 1.9 2007/05/20 08:22:23 pva Exp $
+
+*libkexiv2-0.1.5 (20 May 2007)
+
+  20 May 2007; <pva@gentoo.org> +libkexiv2-0.1.5.ebuild:
+  Version bump. Thank all who helped us in bug #178840 and bug #178904.
 
   16 May 2007; Raúl Porcel <armin76@gentoo.org> libkexiv2-0.1.1.ebuild:
   Add ~alpha wrt #169164
