--- a/app-emulation/kqemu/ChangeLog
+++ b/app-emulation/kqemu/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-emulation/kqemu
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/kqemu/ChangeLog,v 1.18 2007/05/08 19:06:37 jokey Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/kqemu/ChangeLog,v 1.19 2007/05/20 08:28:16 opfer Exp $
+
+  20 May 2007; Christian Faulhammer <opfer@gentoo.org>
+  kqemu-1.3.0_pre11.ebuild:
+  stable amd64, security bug 176674
 
   08 May 2007; Markus Ullmann <jokey@gentoo.org> kqemu-1.3.0_pre11.ebuild:
   Stable on x86 as dependency wrt security bug #176674
