--- a/dev-util/git/ChangeLog
+++ b/dev-util/git/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for dev-util/git
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/git/ChangeLog,v 1.192 2007/05/19 08:12:33 ferdy Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/git/ChangeLog,v 1.193 2007/05/20 13:39:17 ferdy Exp $
+
+*git-1.5.2 (20 May 2007)
+*git-1.5.1.6 (20 May 2007)
+
+  20 May 2007; Fernando J. Pereda <ferdy@gentoo.org>
+  +files/git-1.5.2-tempfile.patch, -git-1.5.1.2.ebuild, -git-1.5.1.3.ebuild,
+  -git-1.5.1.4.ebuild, -git-1.5.1.5.ebuild, +git-1.5.1.6.ebuild,
+  +git-1.5.2.ebuild:
+  New upstream versions. Remove old ones.
 
 *git-1.5.1.5 (19 May 2007)
 
