--- a/x11-plugins/enigmail/ChangeLog
+++ b/x11-plugins/enigmail/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-plugins/enigmail
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/enigmail/ChangeLog,v 1.67 2007/05/19 22:46:07 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/enigmail/ChangeLog,v 1.68 2007/05/20 13:54:12 josejx Exp $
+
+  20 May 2007; Joseph Jezak <josejx@gentoo.org> enigmail-0.95.0.ebuild:
+  Marked ppc stable for bug #178983.
 
   19 May 2007; Christian Faulhammer <opfer@gentoo.org>
   enigmail-0.95.0.ebuild:
