--- a/mail-client/mozilla-thunderbird/ChangeLog
+++ b/mail-client/mozilla-thunderbird/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for mail-client/mozilla-thunderbird
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/mozilla-thunderbird/ChangeLog,v 1.192 2007/05/19 22:49:21 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/mozilla-thunderbird/ChangeLog,v 1.193 2007/05/20 14:06:03 josejx Exp $
+
+  20 May 2007; Joseph Jezak <josejx@gentoo.org>
+  mozilla-thunderbird-2.0.0.0.ebuild:
+  Marked ppc stable for bug #178983.
 
   19 May 2007; Christian Faulhammer <opfer@gentoo.org>
   mozilla-thunderbird-2.0.0.0.ebuild:
