--- a/x11-plugins/replytolist/ChangeLog
+++ b/x11-plugins/replytolist/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-plugins/replytolist
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/replytolist/ChangeLog,v 1.10 2007/05/19 22:38:13 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/replytolist/ChangeLog,v 1.11 2007/05/20 14:07:44 josejx Exp $
+
+  20 May 2007; Joseph Jezak <josejx@gentoo.org> replytolist-0.2.0.ebuild:
+  Marked ppc stable for bug #178983.
 
   19 May 2007; Christian Faulhammer <opfer@gentoo.org>
   replytolist-0.2.0.ebuild:
