--- a/sci-electronics/ktechlab/ChangeLog
+++ b/sci-electronics/ktechlab/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sci-electronics/ktechlab
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-electronics/ktechlab/ChangeLog,v 1.10 2007/04/24 18:40:49 calchan Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-electronics/ktechlab/ChangeLog,v 1.11 2007/05/20 14:51:37 calchan Exp $
+
+*ktechlab-0.3.6 (20 May 2007)
+
+  20 May 2007; Denis Dupeyron <calchan@gentoo.org> +ktechlab-0.3.6.ebuild:
+  Version bump.
 
   24 Apr 2007; Denis Dupeyron <calchan@gentoo.org> ktechlab-0.3.ebuild:
   Fixed homepage, thanks to Peter Fischer (bug #175843).
