--- a/net-wireless/bluez-gnome/ChangeLog
+++ b/net-wireless/bluez-gnome/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-wireless/bluez-gnome
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/bluez-gnome/ChangeLog,v 1.5 2007/05/15 19:35:11 dang Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/bluez-gnome/ChangeLog,v 1.6 2007/05/20 16:00:48 betelgeuse Exp $
+
+*bluez-gnome-0.7 (20 May 2007)
+
+  20 May 2007; Petteri Räty <betelgeuse@gentoo.org>
+  +bluez-gnome-0.7.ebuild:
+  Version bump. Fixes bug #179225.
 
   15 May 2007; Daniel Gryniewicz <dang@gentoo.org> bluez-gnome-0.6.ebuild:
   Marked ~amd64 for bug #178071
