--- a/media-libs/pdflib/ChangeLog
+++ b/media-libs/pdflib/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/pdflib
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/pdflib/ChangeLog,v 1.69 2007/05/19 09:00:31 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/pdflib/ChangeLog,v 1.70 2007/05/20 16:33:40 nixnut Exp $
+
+  20 May 2007; nixnut <nixnut@gentoo.org> pdflib-6.0.3-r1.ebuild:
+  Stable on ppc wrt bug 178185
 
   19 May 2007; Markus Rothe <corsair@gentoo.org> pdflib-6.0.3-r1.ebuild:
   Stable on ppc64; bug #178185
