--- a/app-office/kletterwizard/ChangeLog
+++ b/app-office/kletterwizard/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for app-office/kletterwizard
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/kletterwizard/ChangeLog,v 1.21 2006/11/25 19:54:07 masterdriverz Exp $
+# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-office/kletterwizard/ChangeLog,v 1.22 2007/05/20 16:37:12 philantrop Exp $
+
+*kletterwizard-0.9.8 (20 May 2007)
+
+  20 May 2007; Wulf C. Krueger <philantrop@gentoo.org>
+  +files/kletterwizard-0.9.8-gentoo.diff, +kletterwizard-0.9.8.ebuild:
+  Version bump as per bug 175676. Depends on dev-tex/latex-unicode now because
+  of upstream changes.
 
   25 Nov 2006; Charlie Shepherd <masterdriverz@gentoo.org>
   -kletterwizard-0.9.6.ebuild:
