--- a/dev-ruby/nitro/ChangeLog
+++ b/dev-ruby/nitro/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/nitro
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/nitro/ChangeLog,v 1.10 2007/03/28 11:14:01 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/nitro/ChangeLog,v 1.11 2007/05/20 17:03:00 rbrown Exp $
+
+  20 May 2007; Richard Brown <rbrown@gentoo.org> metadata.xml,
+  -nitro-0.29.0.ebuild:
+  Remove old version. Remove citizen428 from metadata.xml.
 
   28 Mar 2007; Raúl Porcel <armin76@gentoo.org> nitro-0.40.0.ebuild:
   Add ~ia64 wrt bug 157436
