--- a/net-wireless/ipw3945/ChangeLog
+++ b/net-wireless/ipw3945/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-wireless/ipw3945
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/ipw3945/ChangeLog,v 1.26 2007/02/13 16:43:29 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/ipw3945/ChangeLog,v 1.27 2007/05/20 17:14:17 phreak Exp $
+
+*ipw3945-1.2.1 (20 May 2007)
+
+  20 May 2007; Christian Heim <phreak@gentoo.org> +ipw3945-1.2.1.ebuild:
+  Version bump (thanks to Pacho Ramos <pacho at condmat1.ciencias.uniovi.es>
+  in #177696).
 
   13 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org> ipw3945-1.2.0.ebuild:
   Stable on amd64/x86 wrt bug #166528.
