--- a/media-libs/libkexiv2/ChangeLog
+++ b/media-libs/libkexiv2/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libkexiv2
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libkexiv2/ChangeLog,v 1.10 2007/05/20 10:25:53 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libkexiv2/ChangeLog,v 1.11 2007/05/20 18:16:01 mabi Exp $
+
+  20 May 2007; Matti Bickel <mabi@gentoo.org> libkexiv2-0.1.1.ebuild,
+  libkexiv2-0.1.5.ebuild:
+  keyworded ~ppc (bug #169160)
 
   20 May 2007; <pva@gentoo.org> Manifest:
   Fixing manifest.
