--- a/media-plugins/digikamimageplugins/ChangeLog
+++ b/media-plugins/digikamimageplugins/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/digikamimageplugins
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/digikamimageplugins/ChangeLog,v 1.43 2007/05/08 18:21:01 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/digikamimageplugins/ChangeLog,v 1.44 2007/05/20 18:54:44 mabi Exp $
+
+  20 May 2007; Matti Bickel <mabi@gentoo.org>
+  digikamimageplugins-0.9.1.ebuild:
+  keyworded ~ppc (bug #169160)
 
   08 May 2007; Raúl Porcel <armin76@gentoo.org>
   digikamimageplugins-0.9.1.ebuild:
