--- a/net-wireless/bluez-gnome/ChangeLog
+++ b/net-wireless/bluez-gnome/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-wireless/bluez-gnome
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/bluez-gnome/ChangeLog,v 1.6 2007/05/20 16:00:48 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/bluez-gnome/ChangeLog,v 1.7 2007/05/20 19:20:01 betelgeuse Exp $
+
+  20 May 2007; Petteri Räty <betelgeuse@gentoo.org> bluez-gnome-0.7.ebuild:
+  gnome2.eclass takes care of --disable-schemas-install for us so no need for
+  us to specify it.
 
 *bluez-gnome-0.7 (20 May 2007)
 
