--- a/kde-misc/kbfx/ChangeLog
+++ b/kde-misc/kbfx/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for kde-misc/kbfx
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/kbfx/ChangeLog,v 1.11 2007/05/17 10:07:38 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/kbfx/ChangeLog,v 1.12 2007/05/20 21:27:06 philantrop Exp $
+
+*kbfx-0.4.9.3.1-r1 (20 May 2007)
+
+  20 May 2007; Wulf C. Krueger <philantrop@gentoo.org> metadata.xml,
+  +kbfx-0.4.9.3.1-r1.ebuild:
+  Rewritten ebuild using the correct tarball. Fixes bug 178905.
+  Whitespace fixes in metadata.xml.
 
 *kbfx-0.4.9.3.1 (17 May 2007)
 
