--- a/dev-ruby/activerecord-jdbc/ChangeLog
+++ b/dev-ruby/activerecord-jdbc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/activerecord-jdbc
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/activerecord-jdbc/ChangeLog,v 1.1 2007/05/18 21:52:36 nichoj Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/activerecord-jdbc/ChangeLog,v 1.2 2007/05/20 21:35:46 nichoj Exp $
+
+  20 May 2007; Joshua Nichols <nichoj@gentoo.org> +metadata.xml:
+  Forgot to include metadata.xml
 
 *activerecord-jdbc-0.3.1 (18 May 2007)
 
