--- a/dev-java/blackdown-jre/ChangeLog
+++ b/dev-java/blackdown-jre/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/blackdown-jre
-# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/blackdown-jre/ChangeLog,v 1.86 2006/10/18 00:40:12 nichoj Exp $
+# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/blackdown-jre/ChangeLog,v 1.87 2007/05/20 21:44:30 caster Exp $
+
+*blackdown-jre-1.4.2.03-r14 (20 May 2007)
+
+  20 May 2007; Vlastimil Babka <caster@gentoo.org>
+  -blackdown-jre-1.4.2.03-r13.ebuild, +blackdown-jre-1.4.2.03-r14.ebuild:
+  Artifical revbump without change so glsa can be applied for bug #161835.
 
   18 Oct 2006; Joshua Nichols <nichoj@gentoo.org>
   -files/blackdown-jre-1.4.2.03, -blackdown-jre-1.4.2.03.ebuild:
