--- a/kde-base/kdeutils/ChangeLog
+++ b/kde-base/kdeutils/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for kde-base/kdeutils
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeutils/ChangeLog,v 1.198 2007/04/29 16:33:58 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeutils/ChangeLog,v 1.199 2007/05/20 22:23:08 carlo Exp $
+
+*kdeutils-3.5.6-r1 (20 May 2007)
+
+  20 May 2007; Carsten Lohrke <carlo@gentoo.org> +kdeutils-3.5.6-r1.ebuild:
+  klaptopdaemon: Disable pointless binary checksum, bug #178554. Avoid
+  unauthorised access when the system is supposed to be locked & hibernated,
+  KDE bug #143859.
 
   29 Apr 2007; Carsten Lohrke <carlo@gentoo.org> kdeutils-3.5.6.ebuild:
   Remove virtual/x11 dependency.
