--- a/kde-base/klaptopdaemon/ChangeLog
+++ b/kde-base/klaptopdaemon/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for kde-base/klaptopdaemon
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/klaptopdaemon/ChangeLog,v 1.75 2007/05/18 19:18:18 philantrop Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/klaptopdaemon/ChangeLog,v 1.76 2007/05/20 22:24:34 carlo Exp $
+
+*klaptopdaemon-3.5.6-r1 (20 May 2007)
+
+  20 May 2007; Carsten Lohrke <carlo@gentoo.org>
+  +klaptopdaemon-3.5.6-r1.ebuild:
+  Disable pointless binary checksum, bug #178554. Avoid unauthorised access
+  when the system is supposed to be locked & hibernated, KDE bug #143859.
 
   18 May 2007; Wulf C. Krueger <philantrop@gentoo.org>
   klaptopdaemon-3.5.5.ebuild, klaptopdaemon-3.5.6.ebuild:
