--- a/x11-apps/xfs/ChangeLog
+++ b/x11-apps/xfs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xfs
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xfs/ChangeLog,v 1.27 2007/05/05 18:21:02 dang Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xfs/ChangeLog,v 1.28 2007/05/20 22:40:30 jer Exp $
+
+  20 May 2007; Jeroen Roovers <jer@gentoo.org> xfs-1.0.4.ebuild:
+  Stable for HPPA (bug #175465).
 
   05 May 2007; Daniel Gryniewicz <dang@gentoo.org> xfs-1.0.4.ebuild:
   Marked stable on amd64 for bug #175465
