--- a/x11-apps/xsetpointer/ChangeLog
+++ b/x11-apps/xsetpointer/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xsetpointer
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xsetpointer/ChangeLog,v 1.23 2007/05/05 18:24:52 dang Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xsetpointer/ChangeLog,v 1.24 2007/05/20 22:49:23 jer Exp $
+
+  20 May 2007; Jeroen Roovers <jer@gentoo.org> xsetpointer-1.0.1.ebuild:
+  Stable for HPPA (bug #175465).
 
   05 May 2007; Daniel Gryniewicz <dang@gentoo.org> xsetpointer-1.0.1.ebuild:
   Marked stable on amd64 for bug #175465
