--- a/net-p2p/azureus/ChangeLog
+++ b/net-p2p/azureus/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-p2p/azureus
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/azureus/ChangeLog,v 1.46 2007/04/08 00:50:38 josejx Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/azureus/ChangeLog,v 1.47 2007/05/20 23:22:39 caster Exp $
+
+  20 May 2007; Vlastimil Babka <caster@gentoo.org>
+  azureus-2.5.0.4-r1.ebuild:
+  Don't force ecj compiler as requested in bug #145338. Go back to using 256m
+  limit for amd64 and 128m for x86. Should now work that ANT_OPTS is exported.
 
   08 Apr 2007; Joseph Jezak <josejx@gentoo.org> azureus-2.5.0.4.ebuild,
   azureus-2.5.0.4-r1.ebuild:
