--- a/www-servers/tomcat/files/5.5/tomcat.conf.2
+++ b/www-servers/tomcat/files/5.5/tomcat.conf.2
@@ -1,4 +1,4 @@
-# $Header: /var/cvsroot/gentoo-x86/www-servers/tomcat/files/5.5/tomcat.conf.2,v 1.1 2007/05/15 04:37:21 wltjr Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-servers/tomcat/files/5.5/tomcat.conf.2,v 1.2 2007/05/20 23:24:56 wltjr Exp $
 
 # JVM Runtime
 # Using the default setting, it will determine your JVM from the system-vm
@@ -6,9 +6,9 @@
 # See java-config(1) manual page for assistance in determining this value.
 #
 # You can override this value with whatever path you wish.  
-# Example: JAVA_HOME=/opt/sun-jdk-1.4.2.05
+# Example: GENTOO_VM="sun-jdk-1.5"
 
-JAVA_HOME=`java-config --jre-home`
+#GENTOO_VM="sun-jdk-1.5"
 
 # (Optional) Java runtime options used when the "start", "stop", or "run"
 # commands are executed.
