--- a/net-misc/vnc/ChangeLog
+++ b/net-misc/vnc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/vnc
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/vnc/ChangeLog,v 1.79 2007/05/08 17:30:02 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/vnc/ChangeLog,v 1.80 2007/05/20 23:44:55 jer Exp $
+
+  20 May 2007; Jeroen Roovers <jer@gentoo.org> vnc-4.1.2-r2.ebuild:
+  Stable for HPPA (bug #175985).
 
   08 May 2007; Raúl Porcel <armin76@gentoo.org> vnc-4.1.2-r2.ebuild,
   vnc-4.1.2-r3.ebuild:
