--- a/dev-util/git/ChangeLog
+++ b/dev-util/git/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/git
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/git/ChangeLog,v 1.193 2007/05/20 13:39:17 ferdy Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/git/ChangeLog,v 1.194 2007/05/21 02:16:02 jer Exp $
+
+  21 May 2007; Jeroen Roovers <jer@gentoo.org> git-1.5.1.6.ebuild:
+  Stable for HPPA (bug #179245).
 
 *git-1.5.2 (20 May 2007)
 *git-1.5.1.6 (20 May 2007)
