--- a/net-im/gaim/ChangeLog
+++ b/net-im/gaim/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-im/gaim
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/gaim/ChangeLog,v 1.435 2007/05/12 11:48:45 chtekk Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/gaim/ChangeLog,v 1.436 2007/05/21 03:34:35 jer Exp $
+
+  21 May 2007; Jeroen Roovers <jer@gentoo.org> gaim-2.0.0_beta6.ebuild:
+  Marked ~hppa too.
 
   12 May 2007; Luca Longinotti <chtekk@gentoo.org>
   -files/digest-gaim-2.0.0_beta5-r1, -files/digest-gaim-2.0.0_beta5-r2,
