--- a/dev-tex/mpm/ChangeLog
+++ b/dev-tex/mpm/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-tex/mpm
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tex/mpm/ChangeLog,v 1.5 2007/05/19 21:13:10 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-tex/mpm/ChangeLog,v 1.6 2007/05/21 05:58:00 opfer Exp $
+
+*mpm-2.5.2398_beta14-r1 (21 May 2007)
+
+  21 May 2007; Christian Faulhammer <opfer@gentoo.org>
+  mpm-2.5.2398_beta14.ebuild, +mpm-2.5.2398_beta14-r1.ebuild:
+  revert previous change and make a revbump instead
 
   19 May 2007; Christian Faulhammer <opfer@gentoo.org>
   +files/mpm-2.5.2398_beta14-multipleroots.patch,
