--- a/app-office/kletterwizard/ChangeLog
+++ b/app-office/kletterwizard/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-office/kletterwizard
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/kletterwizard/ChangeLog,v 1.22 2007/05/20 16:37:12 philantrop Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/kletterwizard/ChangeLog,v 1.23 2007/05/21 09:56:08 philantrop Exp $
+
+  21 May 2007; Wulf C. Krueger <philantrop@gentoo.org>
+  +kletterwizard-0.9.8.ebuild:
+  Fixed broken header.
 
 *kletterwizard-0.9.8 (20 May 2007)
 
