--- a/dev-ruby/ruby-gnomecanvas2/ChangeLog
+++ b/dev-ruby/ruby-gnomecanvas2/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/ruby-gnomecanvas2
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gnomecanvas2/ChangeLog,v 1.37 2007/04/17 10:55:48 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gnomecanvas2/ChangeLog,v 1.38 2007/05/21 11:28:45 armin76 Exp $
+
+  21 May 2007; Raúl Porcel <armin76@gentoo.org>
+  ruby-gnomecanvas2-0.16.0.ebuild:
+  alpha stable wrt #169094
 
   17 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
   ruby-gnomecanvas2-0.16.0.ebuild:
