--- a/media-plugins/vdr-reelchannelscan/ChangeLog
+++ b/media-plugins/vdr-reelchannelscan/ChangeLog
@@ -1,6 +1,16 @@
 # ChangeLog for media-plugins/vdr-reelchannelscan
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/vdr-reelchannelscan/ChangeLog,v 1.10 2007/05/21 10:12:42 zzam Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/vdr-reelchannelscan/ChangeLog,v 1.11 2007/05/21 11:51:20 zzam Exp $
+
+*vdr-reelchannelscan-0.4.3-r2 (21 May 2007)
+
+  21 May 2007; Matthias Schwarzott <zzam@gentoo.org>
+  +files/0.4.3/default-source-if-no-channel-set.diff,
+  +files/0.4.3/i18n.diff, +files/0.4.3/device-numbering.diff,
+  files/0.4.3/series, -vdr-reelchannelscan-0.4.3-r1.ebuild,
+  +vdr-reelchannelscan-0.4.3-r2.ebuild:
+  Fixed wrong assumption device-nr == card-nr. Added translations, and
+  defaulting to astra in case channel-list is empty.
 
 *vdr-reelchannelscan-0.4.3-r1 (21 May 2007)
 
