--- a/app-portage/autounmask/ChangeLog
+++ b/app-portage/autounmask/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-portage/autounmask
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/autounmask/ChangeLog,v 1.13 2007/05/20 19:52:33 ian Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/autounmask/ChangeLog,v 1.14 2007/05/21 12:24:53 fmccor Exp $
+
+  21 May 2007; Ferris McCormick <fmccor@gentoo.org> autounmask-0.15.ebuild:
+  Stable on sparc --- Bug #177238 --- (Thanks to fix for Bug #178745).
 
 *autounmask-0.16 (20 May 2007)
 
