--- a/dev-php4/pecl-fileinfo/ChangeLog
+++ b/dev-php4/pecl-fileinfo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-php4/pecl-fileinfo
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php4/pecl-fileinfo/ChangeLog,v 1.14 2007/03/06 19:35:42 chtekk Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php4/pecl-fileinfo/ChangeLog,v 1.15 2007/05/21 15:59:57 jer Exp $
+
+  21 May 2007; Jeroen Roovers <jer@gentoo.org> pecl-fileinfo-1.0.4.ebuild:
+  Stable for HPPA (bug #176542).
 
 *pecl-fileinfo-1.0.4 (06 Mar 2007)
 
