--- a/dev-php5/pecl-fileinfo/ChangeLog
+++ b/dev-php5/pecl-fileinfo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-php5/pecl-fileinfo
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/pecl-fileinfo/ChangeLog,v 1.16 2007/03/08 18:30:23 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/pecl-fileinfo/ChangeLog,v 1.17 2007/05/21 16:00:02 jer Exp $
+
+  21 May 2007; Jeroen Roovers <jer@gentoo.org> pecl-fileinfo-1.0.4.ebuild:
+  Stable for HPPA (bug #176542).
 
   08 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org>
   pecl-fileinfo-1.0.4.ebuild:
