--- a/xfce-base/libxfce4mcs/ChangeLog
+++ b/xfce-base/libxfce4mcs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/libxfce4mcs
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/libxfce4mcs/ChangeLog,v 1.92 2007/05/19 14:36:31 welp Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/libxfce4mcs/ChangeLog,v 1.93 2007/05/21 16:58:18 jer Exp $
+
+  21 May 2007; Jeroen Roovers <jer@gentoo.org> libxfce4mcs-4.4.1.ebuild:
+  Stable for HPPA (bug #178510).
 
   19 May 2007; Peter Weller <welp@gentoo.org> libxfce4mcs-4.4.1.ebuild:
   Stable on amd64 wrt bug 178510
