--- a/xfce-base/orage/ChangeLog
+++ b/xfce-base/orage/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/orage
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/orage/ChangeLog,v 1.27 2007/05/19 14:44:33 welp Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/orage/ChangeLog,v 1.28 2007/05/21 17:38:17 jer Exp $
+
+  21 May 2007; Jeroen Roovers <jer@gentoo.org> orage-4.4.1.ebuild:
+  Stable for HPPA (bug #178510).
 
   19 May 2007; Peter Weller <welp@gentoo.org> orage-4.4.1.ebuild:
   Stable on amd64 wrt bug 178510
