--- a/xfce-base/xfce-mcs-plugins/ChangeLog
+++ b/xfce-base/xfce-mcs-plugins/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for xfce-base/xfce-mcs-plugins
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce-mcs-plugins/ChangeLog,v 1.92 2007/05/19 14:58:35 welp Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce-mcs-plugins/ChangeLog,v 1.93 2007/05/21 17:41:29 jer Exp $
+
+  21 May 2007; Jeroen Roovers <jer@gentoo.org>
+  xfce-mcs-plugins-4.4.1.ebuild:
+  Stable for HPPA (bug #178510).
 
   19 May 2007; Peter Weller <welp@gentoo.org> xfce-mcs-plugins-4.4.1.ebuild:
   Stable on amd64 wrt bug 178510
