--- a/xfce-base/xfce-utils/ChangeLog
+++ b/xfce-base/xfce-utils/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/xfce-utils
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce-utils/ChangeLog,v 1.106 2007/05/19 14:49:45 welp Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce-utils/ChangeLog,v 1.107 2007/05/21 17:42:48 jer Exp $
+
+  21 May 2007; Jeroen Roovers <jer@gentoo.org> xfce-utils-4.4.1-r1.ebuild:
+  Stable for HPPA (bug #178510).
 
   19 May 2007; Peter Weller <welp@gentoo.org> xfce-utils-4.4.1-r1.ebuild:
   Stable on amd64 wrt bug 178510
