--- a/xfce-base/xfprint/ChangeLog
+++ b/xfce-base/xfprint/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/xfprint
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfprint/ChangeLog,v 1.96 2007/05/19 14:54:19 welp Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfprint/ChangeLog,v 1.97 2007/05/21 17:46:41 jer Exp $
+
+  21 May 2007; Jeroen Roovers <jer@gentoo.org> xfprint-4.4.1.ebuild:
+  Stable for HPPA (bug #178510).
 
   19 May 2007; Peter Weller <welp@gentoo.org> xfprint-4.4.1.ebuild:
   Stable on amd64 wrt bug 178510
