--- a/xfce-base/xfce4/ChangeLog
+++ b/xfce-base/xfce4/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/xfce4
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4/ChangeLog,v 1.102 2007/05/19 15:24:10 welp Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4/ChangeLog,v 1.103 2007/05/21 17:58:40 jer Exp $
+
+  21 May 2007; Jeroen Roovers <jer@gentoo.org> xfce4-4.4.1.ebuild:
+  Stable for HPPA (bug #178510).
 
   19 May 2007; Peter Weller <welp@gentoo.org> xfce4-4.4.1.ebuild:
   Stable on amd64 wrt bug 178510
