--- a/media-gfx/gimp-print/ChangeLog
+++ b/media-gfx/gimp-print/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-gfx/gimp-print
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/gimp-print/ChangeLog,v 1.82 2007/04/25 20:05:53 genstef Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/gimp-print/ChangeLog,v 1.83 2007/05/21 18:16:40 genstef Exp $
+
+*gimp-print-5.1.1 (21 May 2007)
+
+  21 May 2007; Stefan Schweizer <genstef@gentoo.org>
+  +gimp-print-5.1.1.ebuild:
+  version bump
 
   25 Apr 2007; Stefan Schweizer <genstef@gentoo.org>
   gimp-print-5.1.0.ebuild:
