--- a/sys-cluster/lam-mpi/ChangeLog
+++ b/sys-cluster/lam-mpi/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-cluster/lam-mpi
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/lam-mpi/ChangeLog,v 1.61 2007/05/18 14:06:40 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/lam-mpi/ChangeLog,v 1.62 2007/05/21 18:25:58 jer Exp $
+
+  21 May 2007; Jeroen Roovers <jer@gentoo.org> lam-mpi-7.1.2.ebuild:
+  Stable for HPPA (bug #178510).
 
   18 May 2007; Raúl Porcel <armin76@gentoo.org> lam-mpi-7.1.2.ebuild:
   ia64 stable
