--- a/sys-cluster/openpbs-common/ChangeLog
+++ b/sys-cluster/openpbs-common/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-cluster/openpbs-common
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/openpbs-common/ChangeLog,v 1.15 2007/05/18 14:04:09 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/openpbs-common/ChangeLog,v 1.16 2007/05/21 18:22:32 jer Exp $
+
+  21 May 2007; Jeroen Roovers <jer@gentoo.org> openpbs-common-1.1.1.ebuild:
+  Stable for HPPA (bug #178510).
 
   18 May 2007; Raúl Porcel <armin76@gentoo.org>
   openpbs-common-1.1.1.ebuild:
