--- a/xfce-extra/thunar-thumbnailers/ChangeLog
+++ b/xfce-extra/thunar-thumbnailers/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for xfce-extra/thunar-thumbnailers
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/thunar-thumbnailers/ChangeLog,v 1.16 2007/05/19 15:02:42 welp Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/thunar-thumbnailers/ChangeLog,v 1.17 2007/05/21 18:35:50 jer Exp $
+
+  21 May 2007; Jeroen Roovers <jer@gentoo.org>
+  thunar-thumbnailers-0.2.0.ebuild:
+  Stable for HPPA (bug #178510).
 
   19 May 2007; Peter Weller <welp@gentoo.org>
   thunar-thumbnailers-0.2.0.ebuild:
