--- a/xfce-extra/xfce4-places/ChangeLog
+++ b/xfce-extra/xfce4-places/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-extra/xfce4-places
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-places/ChangeLog,v 1.13 2007/05/19 15:16:19 welp Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-places/ChangeLog,v 1.14 2007/05/21 18:36:43 jer Exp $
+
+  21 May 2007; Jeroen Roovers <jer@gentoo.org> xfce4-places-0.2.0.ebuild:
+  Stable for HPPA (bug #178510).
 
   19 May 2007; Peter Weller <welp@gentoo.org> xfce4-places-0.2.0.ebuild:
   Stable on amd64 wrt bug 178510
