--- a/x11-misc/googleearth/ChangeLog
+++ b/x11-misc/googleearth/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/googleearth
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/googleearth/ChangeLog,v 1.28 2007/05/15 14:24:19 bangert Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/googleearth/ChangeLog,v 1.29 2007/05/23 00:11:41 genstef Exp $
+
+  23 May 2007; Stefan Schweizer <genstef@gentoo.org> googleearth-4.ebuild:
+  Bump md5 sum for the new version and fix sandbox violations with those. Much
+  thanks to Michael Lelli <baby.lueshi@gmail.com> in bug 177972 and bug 177984
 
   15 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
   add <herd>no-herd</herd>
