--- a/kde-base/kaddressbook-plugins/ChangeLog
+++ b/kde-base/kaddressbook-plugins/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kaddressbook-plugins
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kaddressbook-plugins/ChangeLog,v 1.62 2007/05/22 21:06:13 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kaddressbook-plugins/ChangeLog,v 1.63 2007/05/23 12:02:41 carlo Exp $
+
+  23 May 2007; Carsten Lohrke <carlo@gentoo.org>
+  kaddressbook-plugins-3.5.7.ebuild:
+  Correct dependency.
 
 *kaddressbook-plugins-3.5.7 (22 May 2007)
 
