--- a/kde-base/kbstateapplet/ChangeLog
+++ b/kde-base/kbstateapplet/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kbstateapplet
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kbstateapplet/ChangeLog,v 1.63 2007/05/22 21:27:50 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kbstateapplet/ChangeLog,v 1.64 2007/05/23 12:05:26 carlo Exp $
+
+  23 May 2007; Carsten Lohrke <carlo@gentoo.org> kbstateapplet-3.5.7.ebuild:
+  Correct dependency.
 
 *kbstateapplet-3.5.7 (22 May 2007)
 
