--- a/kde-base/kbugbuster/ChangeLog
+++ b/kde-base/kbugbuster/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kbugbuster
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kbugbuster/ChangeLog,v 1.55 2007/05/22 21:28:54 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kbugbuster/ChangeLog,v 1.56 2007/05/23 11:59:08 carlo Exp $
+
+  23 May 2007; Carsten Lohrke <carlo@gentoo.org> kbugbuster-3.5.7.ebuild:
+  Correct dependency.
 
 *kbugbuster-3.5.7 (22 May 2007)
 
