--- a/kde-base/kdeartwork-kwin-styles/ChangeLog
+++ b/kde-base/kdeartwork-kwin-styles/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdeartwork-kwin-styles
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork-kwin-styles/ChangeLog,v 1.63 2007/05/22 21:55:06 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork-kwin-styles/ChangeLog,v 1.64 2007/05/23 11:54:24 carlo Exp $
+
+  23 May 2007; Carsten Lohrke <carlo@gentoo.org>
+  kdeartwork-kwin-styles-3.5.7.ebuild:
+  Correct dependency.
 
 *kdeartwork-kwin-styles-3.5.7 (22 May 2007)
 
