--- a/kde-base/kdeartwork-kworldclock/ChangeLog
+++ b/kde-base/kdeartwork-kworldclock/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdeartwork-kworldclock
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork-kworldclock/ChangeLog,v 1.62 2007/05/22 21:56:15 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork-kworldclock/ChangeLog,v 1.63 2007/05/23 11:53:40 carlo Exp $
+
+  23 May 2007; Carsten Lohrke <carlo@gentoo.org>
+  kdeartwork-kworldclock-3.5.7.ebuild:
+  Correct dependency.
 
 *kdeartwork-kworldclock-3.5.7 (22 May 2007)
 
