--- a/kde-base/kjsembed/ChangeLog
+++ b/kde-base/kjsembed/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kjsembed
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kjsembed/ChangeLog,v 1.67 2007/05/23 00:05:57 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kjsembed/ChangeLog,v 1.68 2007/05/23 12:01:34 carlo Exp $
+
+  23 May 2007; Carsten Lohrke <carlo@gentoo.org> kjsembed-3.5.7.ebuild:
+  Correct dependency.
 
 *kjsembed-3.5.7 (23 May 2007)
 
