--- a/kde-base/korn/ChangeLog
+++ b/kde-base/korn/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/korn
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/korn/ChangeLog,v 1.70 2007/05/23 00:55:42 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/korn/ChangeLog,v 1.71 2007/05/23 11:50:50 carlo Exp $
+
+  23 May 2007; Carsten Lohrke <carlo@gentoo.org> korn-3.5.7.ebuild:
+  Correct dependency.
 
 *korn-3.5.7 (23 May 2007)
 
