--- a/kde-base/ksayit/ChangeLog
+++ b/kde-base/ksayit/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/ksayit
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/ksayit/ChangeLog,v 1.72 2007/05/23 01:18:12 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/ksayit/ChangeLog,v 1.73 2007/05/23 12:00:25 carlo Exp $
+
+  23 May 2007; Carsten Lohrke <carlo@gentoo.org> ksayit-3.5.7.ebuild:
+  Correct dependency.
 
 *ksayit-3.5.7 (23 May 2007)
 
