--- a/kde-base/noatun-plugins/ChangeLog
+++ b/kde-base/noatun-plugins/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/noatun-plugins
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/noatun-plugins/ChangeLog,v 1.67 2007/05/23 02:37:57 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/noatun-plugins/ChangeLog,v 1.68 2007/05/23 11:56:54 carlo Exp $
+
+  23 May 2007; Carsten Lohrke <carlo@gentoo.org>
+  noatun-plugins-3.5.7.ebuild:
+  Correct dependency.
 
 *noatun-plugins-3.5.7 (23 May 2007)
 
