--- a/kde-base/kdenetwork/ChangeLog
+++ b/kde-base/kdenetwork/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/kdenetwork
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdenetwork/ChangeLog,v 1.262 2007/05/22 23:01:55 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdenetwork/ChangeLog,v 1.263 2007/05/23 19:56:10 flameeyes Exp $
+
+  23 May 2007; Diego Pettenò <flameeyes@gentoo.org>
+  kdenetwork-3.5.7.ebuild:
+  Accept also freebsd-ubin as talk(1) implementation. Solves bug #178854 for
+  FreeBSD.
 
 *kdenetwork-3.5.7 (22 May 2007)
 
