--- a/kde-base/artsplugin-mpg123/ChangeLog
+++ b/kde-base/artsplugin-mpg123/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/artsplugin-mpg123
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/artsplugin-mpg123/ChangeLog,v 1.40 2007/02/05 12:09:09 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/artsplugin-mpg123/ChangeLog,v 1.41 2007/05/24 11:05:15 carlo Exp $
+
+  24 May 2007; Carsten Lohrke <carlo@gentoo.org>
+  artsplugin-mpg123-3.5.6.ebuild:
+  Adjust MAXKDEVER.
 
   05 Feb 2007; Diego Pettenò <flameeyes@gentoo.org>
   -files/artsplugin-mpg123-mcpu.patch:
