--- a/kde-base/dcopjava/ChangeLog
+++ b/kde-base/dcopjava/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/dcopjava
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/dcopjava/ChangeLog,v 1.22 2006/11/18 16:08:35 flameeyes Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/kde-base/dcopjava/ChangeLog,v 1.23 2007/05/24 11:08:31 carlo Exp $
+
+  24 May 2007; Carsten Lohrke <carlo@gentoo.org> dcopjava-3.5.3.ebuild:
+  Adjust MAXKDEVER.
 
   18 Nov 2006; Diego Pettenò <flameeyes@gentoo.org> -dcopjava-3.5.0.ebuild:
   Remove old versions.
