--- a/kde-base/dcopperl/ChangeLog
+++ b/kde-base/dcopperl/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/dcopperl
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/dcopperl/ChangeLog,v 1.37 2007/01/27 15:05:24 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/dcopperl/ChangeLog,v 1.38 2007/05/24 11:09:30 carlo Exp $
+
+  24 May 2007; Carsten Lohrke <carlo@gentoo.org> dcopperl-3.5.6.ebuild:
+  Adjust MAXKDEVER.
 
 *dcopperl-3.5.6 (27 Jan 2007)
 
