--- a/kde-base/kalyptus/ChangeLog
+++ b/kde-base/kalyptus/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kalyptus
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kalyptus/ChangeLog,v 1.47 2007/02/04 01:42:03 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kalyptus/ChangeLog,v 1.48 2007/05/24 11:10:29 carlo Exp $
+
+  24 May 2007; Carsten Lohrke <carlo@gentoo.org> kalyptus-3.5.4.ebuild:
+  Adjust MAXKDEVER.
 
   04 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> -kalyptus-3.5.2.ebuild:
   Remove old versions.
