--- a/kde-base/kdeaddons-kfile-plugins/ChangeLog
+++ b/kde-base/kdeaddons-kfile-plugins/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdeaddons-kfile-plugins
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaddons-kfile-plugins/ChangeLog,v 1.43 2007/04/30 20:24:54 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaddons-kfile-plugins/ChangeLog,v 1.44 2007/05/24 11:14:12 carlo Exp $
+
+  24 May 2007; Carsten Lohrke <carlo@gentoo.org>
+  kdeaddons-kfile-plugins-3.5.6-r1.ebuild:
+  Adjust MAXKDEVER.
 
 *kdeaddons-kfile-plugins-3.5.6-r1 (30 Apr 2007)
 
