--- a/kde-base/kdeartwork-sounds/ChangeLog
+++ b/kde-base/kdeartwork-sounds/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdeartwork-sounds
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork-sounds/ChangeLog,v 1.43 2007/01/20 00:42:40 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork-sounds/ChangeLog,v 1.44 2007/05/24 11:15:49 carlo Exp $
+
+  24 May 2007; Carsten Lohrke <carlo@gentoo.org>
+  kdeartwork-sounds-3.5.6.ebuild:
+  Adjust MAXKDEVER.
 
   20 Jan 2007; Carsten Lohrke <carlo@gentoo.org>
   kdeartwork-sounds-3.5.6.ebuild:
