--- a/kde-base/kmailcvt/ChangeLog
+++ b/kde-base/kmailcvt/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kmailcvt
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kmailcvt/ChangeLog,v 1.62 2007/02/05 12:29:15 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kmailcvt/ChangeLog,v 1.63 2007/05/24 11:19:43 carlo Exp $
+
+  24 May 2007; Carsten Lohrke <carlo@gentoo.org> kmailcvt-3.5.5.ebuild:
+  Adjust MAXKDEVER.
 
   05 Feb 2007; Diego Pettenò <flameeyes@gentoo.org>
   -files/fix-kmailcvt-compilation.diff:
