--- a/kde-base/kmtrace/ChangeLog
+++ b/kde-base/kmtrace/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kmtrace
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kmtrace/ChangeLog,v 1.48 2007/02/04 02:39:35 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kmtrace/ChangeLog,v 1.49 2007/05/24 11:20:27 carlo Exp $
+
+  24 May 2007; Carsten Lohrke <carlo@gentoo.org> kmtrace-3.5.5.ebuild:
+  Adjust MAXKDEVER.
 
   04 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> -kmtrace-3.5.2.ebuild:
   Remove old versions.
