--- a/kde-base/librss/ChangeLog
+++ b/kde-base/librss/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/librss
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/librss/ChangeLog,v 1.44 2007/01/20 00:37:20 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/librss/ChangeLog,v 1.45 2007/05/24 11:25:06 carlo Exp $
+
+  24 May 2007; Carsten Lohrke <carlo@gentoo.org> librss-3.5.6.ebuild:
+  Adjust MAXKDEVER.
 
   20 Jan 2007; Carsten Lohrke <carlo@gentoo.org> librss-3.5.6.ebuild:
   Correct MAXKDEVER.
