--- a/kde-base/mpeglib/ChangeLog
+++ b/kde-base/mpeglib/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/mpeglib
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/mpeglib/ChangeLog,v 1.46 2007/04/29 16:32:00 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/mpeglib/ChangeLog,v 1.47 2007/05/24 11:25:57 carlo Exp $
+
+  24 May 2007; Carsten Lohrke <carlo@gentoo.org> mpeglib-3.5.6.ebuild:
+  Adjust MAXKDEVER.
 
   29 Apr 2007; Carsten Lohrke <carlo@gentoo.org> mpeglib-3.5.6.ebuild:
   Remove virtual/x11 dependency.
