--- a/kde-base/qtsharp/ChangeLog
+++ b/kde-base/qtsharp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/qtsharp
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/qtsharp/ChangeLog,v 1.20 2006/10/03 13:16:02 flameeyes Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/kde-base/qtsharp/ChangeLog,v 1.21 2007/05/24 11:26:44 carlo Exp $
+
+  24 May 2007; Carsten Lohrke <carlo@gentoo.org> qtsharp-3.5.0.ebuild:
+  Adjust MAXKDEVER.
 
   03 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> qtsharp-3.5.0.ebuild:
   Bump to 3.5.5 (pre-release).
