--- a/kde-base/xparts/ChangeLog
+++ b/kde-base/xparts/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/xparts
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/xparts/ChangeLog,v 1.21 2006/10/26 18:58:37 flameeyes Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/kde-base/xparts/ChangeLog,v 1.22 2007/05/24 11:28:58 carlo Exp $
+
+  24 May 2007; Carsten Lohrke <carlo@gentoo.org> xparts-3.5.0.ebuild:
+  Adjust MAXKDEVER.
 
   26 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> xparts-3.5.0.ebuild:
   Remove mozilla useflag from IUSE.
